2005-02-21  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h (xnarch_remap_page_range):
	Stop using deprecated remap_page_range() for kernels >= 2.6.10.

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10-i386-r9c4.

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r6c13.

	* include/nucleus/asm-i386/system.h (xnarch_switch_to): Eagerly
	reinstate the I/O bitmap of any incoming shadow thread which has
	previously requested I/O permissions. This prevents lazy update
	upon fault of the I/O bitmap for shadow threads that explicitely
	told the kernel that they would need to perform raw I/O ops.

	* TROUBLESHOOTING: Start troubleshooting guide.

	* nucleus/shadow.c (xnshadow_relax): Engage interrupt shield when
	moving to secondary mode.

2005-02-20  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h (__switch_threads): Make sure
	show_stack() could find %ebp at TOS.

	* nucleus/pod.c (xnpod_fault_handler): Suspend on XNSUSP instead
	of XNDORMANT.

2005-02-19  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/atomic.h: Define likely()/unlikely()
	hints for user-space inclusion.

	* nucleus/pod.c (xnpod_announce_tick): Add watchdog support for
	detecting runaway threads.

	* include/nucleus/asm-*/syscall.h: Use the *_inatomic forms of
	copy to/from_user() macros to bypass might_sleep() checks: syscall
	issuers cannot fault since all their memory is mlocked, and
	might_sleep() might trigger randomly when executing in primary
	mode.

	* nucleus/ltt.c (xnltt_log_mark): Add custom mark logger.

	* testsuite/klatency/latency-module.c (__latency_init): Move call
	to rt_timer_start() out of the latency task, since this it might
	sleep Linux-wise.

	* arch/*/hal/hal.c (rthal_release_linux_irq): Call free_irq()
	outside of the critical section.

	* arch/*/hal/hal.c (rthal_request_linux_irq,
	rthal_request_linux_irq): Use spinlock_irq form.

	* skins/rtai/syscall.c, nucleus/fusion.c: Mark start/stop timer